--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,7 +6,7 @@
     .label{
         @apply block mb-1 text-gray-500 dark:text-gray-300 font-medium
     }
-    
+
     .input{
         @apply block w-full p-2 rounded-md shadow-sm border border-gray-300 dark:border-gray-600 text-gray-500
     }
@@ -15,7 +15,19 @@
         @apply text-sm text-red-500 dark:text-red-400
     }
 
+    .btn-normal{
+        @apply bg-gray-600 hover:bg-gray-500 text-white font-medium p-2 rounded-md
+    }
+
     .btn-primary{
         @apply bg-indigo-600 hover:bg-indigo-500 text-white font-medium p-2 rounded-md
+    }
+
+    .input-filter-l{
+        @apply placeholder:text-gray-400 dark:placeholder:text-gray-600 border border-gray-200 dark:border-gray-700 rounded-l-md text-gray-600 dark:text-gray-400 dark:bg-gray-800
+    }
+
+    .input-filter-r{
+        @apply placeholder:text-gray-400 dark:placeholder:text-gray-600 border border-gray-200 dark:border-gray-700 rounded-r-md text-gray-600 dark:text-gray-400 dark:bg-gray-800
     }
 }
